# quiz

./: .gitignore  CMakeLists.txt  README.md
example/: capitals.py  correct.py
src/: Config.cpp  Config.h  Main.cpp  Main.h  Question.cpp  Question.h  Settings.h  utf8.cpp  utf8.h
